objects/disco__Discovery_Type__c.object
<CustomObject>
    <description>A category of Discovery used across all Form Templates</description>
    <fields>
        <fullName>disco__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Picklist_for_Tests_1__c</fullName>
        <description>This picklist is necessary tor Youreka tests. Please do not alter this picklist.</description>
        <label>Picklist for Tests 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Picklist_for_Tests_2__c</fullName>
        <description>This picklist is necessary tor Youreka tests. Please do not alter this picklist.</description>
        <label>Picklist for Tests 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>disco__Picklist_for_Tests_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Discovery Type</label>
    <listViews>
        <fullName>disco__All</fullName>
        <columns>NAME</columns>
        <columns>disco__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Discovery Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovery Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>